# Qt5WidgetLearning

./: README.md  q
Beginner/ATasteofWidgets/: CMakeLists.txt  dialog.cpp  dialog.ui
Beginner/ATasteofWidgetsPureCode/: CMakeLists.txt  dialog.cpp  dialog.h  ui_dialog.cpp
Beginner/ButtonAndCheckboxes/: CMakeLists.txt  Page1.cpp  Page2.cpp  Page3.cpp  Page4.cpp  Page6.cpp  dialog.cpp  dialog.h  dialog.ui
Beginner/CombosListsSpinboxYADAYADA/: CMakeLists.txt  Tab1.cpp  Tab2.cpp  Tab3.cpp  Tab4.cpp  Tab6.cpp  Tab7.cpp  Tab8.cpp  Tab9Assignment.cpp  dialog.cpp  dialog.h  dialog.ui  main.cpp  tab5.cpp
Beginner/Containers/: CMakeLists.txt
Beginner/Containers/Assignment/: dialog.cpp  dialog.h
Beginner/Containers/GroupBox/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Beginner/Containers/MDI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Beginner/Containers/ScrollArea/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
Beginner/Containers/StackedWidget/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
Beginner/Containers/TabWidget/: CMakeLists.txt  dialog.cpp  dialog.h
Beginner/Containers/ToolBox/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  resources.qrc
Beginner/DivingIntoQWidget/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
Beginner/Examples/: CMakeLists.txt
Beginner/Examples/BadCalculator/: CMakeLists.txt  dialog.cpp  dialog.h  equation.cpp  equation.h
Beginner/Examples/Clippy/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Beginner/Examples/PathBuilder/: CMakeLists.txt  dialog.cpp  dialog.h
Beginner/Examples/ScreenShot/: CMakeLists.txt  dialog.cpp  dialog.h
Beginner/Examples/StopWatch/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
Beginner/Examples/TcpChatClient/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Beginner/Examples/TcpChatServer/: CMakeLists.txt  dialog.cpp  dialog.h  server.cpp
Beginner/Examples/ToDoList/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
Beginner/Layouts/: CMakeLists.txt  dialog.ui
Beginner/Models/: CMakeLists.txt
Beginner/Models/Assignment/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
Beginner/Models/ExtractingData/: CMakeLists.txt  dialog.cpp  dialog.h
Beginner/Models/FileSystemModel/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  main.cpp
Beginner/Models/FileSystemModelSync/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
Beginner/Models/StandardItemModel/: CMakeLists.txt  dialog.cpp
Beginner/Models/StandardItemModelTable/: CMakeLists.txt  dialog.cpp  dialog.h
Beginner/Models/StandardItemModelTree/: CMakeLists.txt  dialog.cpp  dialog.h
Beginner/Models/StringListModel/: CMakeLists.txt  dialog.cpp  dialog.h  main.cpp
Beginner/MoreDialogs/: CMakeLists.txt
Beginner/MoreDialogs/Assignment/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  login.cpp  login.h  login.ui
Beginner/MoreDialogs/ExecOtherDialogs/: CMakeLists.txt
Beginner/MoreDialogs/PassingCustomClassesToOtherDialogs/: CMakeLists.txt  dialog.cpp
Beginner/MoreDialogs/PassingDataToOtherDialogs/: CMakeLists.txt  dialog.cpp  dialog.h  selections.cpp  selections.h
Beginner/MoreDialogs/ShowingOtherDialogs/: CMakeLists.txt  main.cpp
Beginner/MoreDialogs/ShowingOtherDialogs/header/: dialog.h  dialog2.h
Beginner/MoreDialogs/ShowingOtherDialogs/source/: dialog.cpp  dialog2.cpp
Beginner/Resources/: CMakeLists.txt  Tab1.cpp  Tab2.cpp  Tab3.cpp  Tab4.cpp  dialog.cpp  dialog.h
Beginner/Resources/libraries/MyLib/: CMakeLists.txt  mylib.cpp  mylib.h
Beginner/Resources/resources/: resources.qrc  resources1.qrc  resources2.qrc
Beginner/Resources/ui/: dialog.ui
Beginner/RichTextEditor/: CMakeLists.txt
Beginner/RichTextEditor/RichTextEditor/: CMakeLists.txt  aboutdialog.cpp  finddialog.cpp  finddialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  replacedialog.cpp  replacedialog.h
Beginner/TextEditor_QMainWindow/: CMakeLists.txt
Beginner/TextEditor_QMainWindow/Assignment/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
Beginner/TextEditor_QMainWindow/TextEditor1/: CMakeLists.txt  mainwindow.cpp
Beginner/TextEditor_QMainWindow/TextEditor2/: CMakeLists.txt  dialog.cpp  dialog.h  mainwindow.cpp  mainwindow.h
Beginner/TextEditor_QMainWindow/TextEditorBasics/: CMakeLists.txt
Beginner/build-DivingIntoQWidget-Desktop_Qt_6_5_0_MSVC2019_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
Beginner/build-Layouts-Desktop_Qt_6_5_0_MSVC2019_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
Trials/CustomWidget/: CMakeLists.txt  cardwidget.cpp  cardwidget.h  cardwidget.ui  dialog.cpp  dialog.h  dialog.ui  main.cpp  style.qss  utilities.cpp  utilities.h
Trials/DynamicWidgetAppend/: CMakeLists.txt  dialog.cpp  dialog.ui
Trials/ICMPpinger/: CMakeLists.txt  icmppinger.cpp  icmppinger.h  main.cpp
