cmake_minimum_required(VERSION 3.5)

project(Models VERSION 0.1 LANGUAGES CXX)

add_subdirectory(StringListModel)
add_subdirectory(FileSystemModel)
add_subdirectory(StandardItemModel)
add_subdirectory(StandardItemModelTable)
add_subdirectory(StandardItemModelTree)
add_subdirectory(FileSystemModelSync)
add_subdirectory(ExtractingData)
add_subdirectory(Assignment)
